--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -5,7 +5,7 @@ $berlingo: 'berlingo';
   font-family: $euclid;
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: auto;
   src: url("@/assets/fonts/Euclid Circular B Regular.ttf");
 }
 
@@ -13,7 +13,7 @@ $berlingo: 'berlingo';
   font-family: $euclid;
   font-style: normal;
   font-weight: 700;
-  font-display: swap;
+  font-display: auto;
   src: url("@/assets/fonts/Euclid Circular B Bold.ttf");
 }
 
@@ -21,7 +21,7 @@ $berlingo: 'berlingo';
   font-family: $euclid;
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
+  font-display: auto;
   src: url("@/assets/fonts/Euclid Circular B Light.ttf");
 }
 
@@ -29,7 +29,7 @@ $berlingo: 'berlingo';
   font-family: $euclid;
   font-style: italic;
   font-weight: 300;
-  font-display: swap;
+  font-display: auto;
   src: url("@/assets/fonts/Euclid Circular B Light Italic.ttf");
 }
 
