--- a/src/assets/scss/_reset.scss
+++ b/src/assets/scss/_reset.scss
@@ -34,6 +34,7 @@ html {
   font-family: $font-primary;
   font-size: 62.5%;
   overflow: hidden;
+  touch-action: manipulation;
 }
 body {
 	line-height: 1;
@@ -69,6 +70,12 @@ button, input[type="submit"], input[type="reset"] {
 button:focus,
 button:active {
   outline: none;
+}
+
+button, div {
+  img {
+	pointer-events: none;
+  }
 }
 
 input,
