--- a/src/config/_classes.scss
+++ b/src/config/_classes.scss
@@ -5,6 +5,7 @@
 .Input {
   border: none;
   border-bottom: 0.1rem solid $black;
+  background: none;
 
   &::placeholder {
     font-family: $font-primary;
