--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -5,6 +5,13 @@
   opacity: 0;
 }
 
+.slide-enter-active, .slide-leave-active {
+  transition: transform .5s;
+}
+.slide-enter, .slide-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  transform: translateX(100%);
+}
+
 .list-enter-active,
 .list-leave-active {
   transition: all 0.5s ease;
