--- a/src/config/_classes.scss
+++ b/src/config/_classes.scss
@@ -19,3 +19,14 @@
 .Touch {
   padding: 2.4rem;
 }
+
+.Button {
+  background: $blue;
+  width: 12.5rem;
+  color: $white;
+  padding: 0.5rem;
+  line-height: 1.5rem;
+  border-radius: 0.5rem;
+  font-weight: 700;
+  font-family: $font-primary;
+}
