--- a/src/assets/scss/_keyframes.scss
+++ b/src/assets/scss/_keyframes.scss
@@ -18,3 +18,17 @@
     transform: translateX(-150%);
   }
 }
+
+@keyframes bounce {
+  0% {
+    scale: 0.8;
+  }
+
+  10% {
+    scale: 1;
+  }
+
+  100% {
+    scale: 1;
+  }
+}
